tests/baselines/reference/parameterDecoratorKey1.errors.txt
tests/cases/compiler/parameterDecoratorKey1.ts(5,7): error TS2345: Argument of type '"bar"' is not assignable to parameter of type '"foo"'.


==== tests/cases/compiler/parameterDecoratorKey1.ts (1 errors) ====
    const decorator = (target: any, key: "foo", index: number) => {};
    
    class A {
    	foo(@decorator param1: string) {}
    	bar(@decorator param1: string) {}
    	     ~~~~~~~~~
!!! error TS2345: Argument of type '"bar"' is not assignable to parameter of type '"foo"'.
    }
    